feat(m/mach): monadic repeat with until=>loop() and emit
Adds the monadic repeat family: repeat(code, until, emit) runs a code
transform until a predicate holds, with loop() exposing the per-repeat
iteration counter from the monad's state.

- repeat now takes rec(CODE, UNTIL, EMIT). until and emit receive the
  monad (so loop() can read the counter); code operates on the obj.
- loop() is a new ?monad inst that yields the current loop counter.
- PCMonad state carries a LOOP key; incrLoop(-1) resets it when repeat
  exits, so chained repeats start their counter at 0.
- Sub-predicates are wrapped via toCode() so single-inst predicates
  (is(gt(4))) route through the machine like multi-inst ones.
- Code.apply: a monad lhs always runs through the machine; single insts
  dispatch by their own ?monad flag (loop() gets the monad, value insts
  get the obj), resolved against the obj.
- SwarmMachine: monad starts skip the START inst (avoiding re-application
  of the monad's own inst); resolve() resolves sub-code against the
  monad's obj type.
- PCMonad obj()/inst()/code() now use raw jvm access (at(0) auto-resolved
  an empty objs to noobj, silently breaking barrier gathers) and multiply
  the monad coefficient by the inner obj's.
- mInstSetTest: expands testRepeat to 24 rows covering loop()/value
  predicates, bulked input, emit variants, and chained repeats.